--- a/app/src/main/res/drawable/circular_progress_bar.xml
+++ b/app/src/main/res/drawable/circular_progress_bar.xml
@@ -3,8 +3,8 @@
     <shape android:innerRadiusRatio="2.5" android:shape="ring" android:thickness="14dp" android:useLevel="true">
         <!-- this line fixes the issue for lollipop api 21 -->
         <gradient
-            android:angle="0" android:endColor="#ffffff"
-            android:startColor="#ffffff" android:type="sweep"
+            android:angle="0" android:endColor="#1ace6f"
+            android:startColor="#37CCCC" android:type="sweep"
             android:useLevel="false" />
     </shape>
 </rotate>
