--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,28 +100,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:text="0.0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/collectedHours"
-        android:layout_alignBaseline="@+id/textView7"
-        android:layout_alignBottom="@+id/textView7"
-        android:layout_toRightOf="@+id/removeFour"
-        android:layout_toEndOf="@+id/removeFour" />
-
-    <TextView
-        android:text="Current Hours:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView7"
-        android:layout_row="3"
-        android:layout_column="0"
-        android:layout_marginBottom="13dp"
-        android:layout_above="@+id/removeEight"
-        android:layout_toRightOf="@+id/startingValueText"
-        android:layout_toEndOf="@+id/startingValueText" />
-
     <ProgressBar android:id="@+id/countdownTimer"
         android:layout_width="218dp"
         android:indeterminate="false"
@@ -135,4 +113,43 @@
         android:layout_below="@+id/updateButton"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/collectedHours" />
+
+    <TextView
+        android:text="Current Hours:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView7"
+        android:layout_row="3"
+        android:layout_column="0"
+        android:layout_marginBottom="11dp"
+        android:layout_above="@+id/removeEight"
+        android:layout_alignRight="@+id/startingValueText"
+        android:layout_alignEnd="@+id/startingValueText" />
+
+    <TextView
+        android:text="0.0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/collectedHours"
+        android:layout_alignBaseline="@+id/textView7"
+        android:layout_alignBottom="@+id/textView7"
+        android:layout_alignLeft="@+id/updateButton"
+        android:layout_alignStart="@+id/updateButton" />
+
+    <TextView
+        android:text="="
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_below="@+id/countdownTimer"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="0 days"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/numOfDays"
+        android:layout_below="@+id/countdownTimer"
+        android:layout_alignLeft="@+id/removeOne"
+        android:layout_alignStart="@+id/removeOne" />
 </RelativeLayout>
